- fix overflow - fix title name

--- a/frontend/src/app/intro/intro.component.scss
+++ b/frontend/src/app/intro/intro.component.scss
@@ -646,7 +646,7 @@ h3 {
 @keyframes slideUp {
 	0% {
 		opacity: 0;
-		transform: translateY(150px) scale(0.95);
+		transform: translateY(50px) scale(0.95);
 	}
 	100% {
 		opacity: 1;
@@ -965,7 +965,7 @@ h3 {
 .optimism { background: url(/img/intro/optimism.png); background-size: cover; }
 .eth-token { background: url(/img/intro/eth-token.png); background-size: cover; }
 .orca { background: url(/img/intro/orca.png); background-size: cover; }
-.jup { background: url(/img/intro/jup-token.png); background-size: cover; }
+.jup-token { background: url(/img/intro/jup-token.png); background-size: cover; }
 .render { background: url(/img/intro/render.png); background-size: cover; }
 .jito { background: url(/img/intro/jito.png); background-size: cover; }
 .helium { background: url(/img/intro/helium.png); background-size: cover; }
